--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,24 +2,22 @@
 import ExperienceItem from "./ExperienceItem.astro"
 
 const EXPERIENCE = [
-    {
-        date: 'February 2022',
-        title: 'Application UI code in Tailwind CSS',
-        description: 'Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.',
-        link: '#',
-        linkText: 'Learn more'
-    },
-    {
-        date: 'March 2022',
-        title: 'Marketing UI design in Figma',
-        description: 'All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.'
-    },
-    {
-        date: 'April 2022',
-        title: 'E-Commerce UI code in Tailwind CSS',
-        description: 'Get started with dozens of web components and interactive elements built on top of Tailwind CSS.'
-    }
-]
+  {
+    date: '2022 – Actualidad',
+    title: 'Ingeniería Informática (último año)',
+    description: 'Cursando el último año del grado en Ingeniería Informática.'
+  },
+  {
+    date: '2020 – 2022',
+    title: 'FP Grado Superior en Desarrollo de Aplicaciones Multiplataforma',
+    description: 'Formación profesional de grado superior en DAM. Matrícula de honor.'
+  },
+  {
+    date: '2018 – 2020',
+    title: 'FP Grado Medio en Sistemas Microinformáticos y Redes',
+    description: 'Formación profesional de grado medio en SMR. Matrícula de honor.'
+  }
+];
 ---
 
 <ol class="relative border-s border-gray-200 dark:border-gray-700">               
