--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@
         <!-- Menú -->
         <div class="items-center justify-between hidden w-full md:flex md:w-auto" id="navbar-sticky">
         <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium rounded-lg md:space-x-8 md:flex-row md:mt-0 md:border-0">
-            <li><a href="#experiencia" class="block py-2 px-3 text-white hover:text-white/80 ">Experiencia</a></li>
+            <li><a href="#formacion" class="block py-2 px-3 text-white hover:text-white/80 ">Formación</a></li>
             <li><a href="#proyectos" class="block py-2 px-3 text-white hover:text-white/80">Proyectos</a></li>
             <li><a href="#sobre-mi" class="block py-2 px-3 text-white hover:text-white/80">Sobre mí</a></li>
             <li><a href="mailto:javitin.dev@gmail.com" class="block py-2 px-3 text-white hover:text-white/80">Contacto</a></li>
