--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,75 +3,36 @@ import ProjectsItem from "./ProjectsItem.astro";
 
 const PROJECTS = [
   {
-    title: "DevJobs",
+    title: "2ISI",
     description:
-      "Plataforma de empleo para desarrolladores, donde las empresas pueden publicar ofertas de trabajo y los desarrolladores pueden buscar y postularse a empleos que se ajusten a sus habilidades y preferencias.",
-    image: "/projects/proyecto1.png",
-    tags: ["Next.js", "TailwindCSS", "TypeScript", "Prisma", "PostgreSQL"],
-    link: "https://devjobs-javit-dev.vercel.app/",
-    github: "https://github.com/Javit-Dev/DevJobs",
+      "Dashboard estadístico para recoger y visualizar datos sobre tus grupos de discord de forma sencilla y atractiva. Utiliza un Bot para recopilar datos y mostrarlos en gráficos interactivos.",
+    image: "/projects/proyecto1.webp",
+    tags: ["Flask", "Angular", "Azure", "Docker", "gRPC"],
+    github: "https://github.com/Javit-Dev/isi-2isi",
   },
   {
-    title: "Taskify",
+    title: "IPOkemon",
     description:
-      "Aplicación de gestión de tareas que permite a los usuarios crear, organizar y realizar un seguimiento de sus tareas diarias de manera eficiente.",
-    image: "/projects/proyecto1.png",
-    tags: ["React", "TailwindCSS", "TypeScript", "Firebase"],
-    link: "https://taskify-javit-dev.vercel.app/",
-    github: "https://github.com/Javit-Dev/Taskify",
+      "Aplicación de escritorio para la asignatura de IPO 2, permite interactuar y realizar batallas con Pokemon realizados en Blend.",
+    image: "/projects/proyecto1.webp",
+    tags: [".NET", "C#", "WPF"],
+    github: "https://github.com/Javit-Dev/IPOkemon",
+  },
+  {
+      title: "Remote-Types",
+      description:
+      "Aplicación realizada para la asignatura de Sistemas Distribuidos, el cual permite tener un sistema de tipos remotos realizado en Python con ZeroC Ice. Además cuenta con un cliente con Apache Kafka.",
+      image: "/projects/proyecto1.webp",
+      tags: ["Python", "ZeroCIce", "Apache Kafka"],
+      github: "https://github.com/Javit-Dev/remote-types-Distribuidos-2024"
   },
 ];
 ---
 
-
-
-
-
-
-
-<div id="default-carousel" class="relative w-full" data-carousel="slide">
-    <!-- Carousel wrapper -->
-    <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
-         <!-- Item 1 -->
-        <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <img src="/projects/carousel-1.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-        </div>
-        <!-- Item 2 -->
-        <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <img src="/projects/carousel-2.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-        </div>
-        <!-- Item 3 -->
-        <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <img src="/projects/carousel-3.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-        </div>
-        <!-- Item 4 -->
-        <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <img src="/projects/carousel-4.svg" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-        </div>
-    </div>
-    <!-- Slider indicators -->
-    <div class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse">
-        <button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1" data-carousel-slide-to="0"></button>
-        <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
-        <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
-        <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
-        <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
-    </div>
-    <!-- Slider controls -->
-    <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
-        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-            <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
-            </svg>
-            <span class="sr-only">Previous</span>
-        </span>
-    </button>
-    <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
-        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-            <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-            </svg>
-            <span class="sr-only">Next</span>
-        </span>
-    </button>
-</div>
+<ol class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+{PROJECTS.map((project) => (
+    <li class="flex justify-center">
+    <ProjectsItem {...project} />
+    </li>
+))}
+</ol>
