--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const {description, title} = Astro.props;
 
 
 <!doctype html>
-<html lang="en">
+<html lang="es" class="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content={description}/>
@@ -22,7 +22,7 @@ const {description, title} = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="text-neutral-900 dark:text-neutral-100">
 		<div
     		class="pointer-events-none fixed inset-0 -z-10
            bg-neutral-950
@@ -31,8 +31,6 @@ const {description, title} = Astro.props;
 		<Header></Header>
 		<slot />
 		<Footer></Footer>
-
-		<script is:inline src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 	</body>
 </html>
 
