--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,11 @@ import GithubIcon from '../components/icons/GithubIcon.astro';
 import SocialPill from '../components/SocialPill.astro';
 import LinkedinIcon from '../components/icons/LinkedinIcon.astro';
 import MailIcon from '../components/icons/MailIcon.astro';
+import SearchIcon from '../components/icons/SearchIcon.astro';
 import Experience from '../components/Experience.astro';
 import SectionContainer from '../components/SectionContainer.astro';
+import avatar from '../assets/github_profile_pic.jpg';
+import { Image } from 'astro:assets';
 import Projects from '../components/Projects.astro';
 ---
 
@@ -14,12 +17,12 @@ import Projects from '../components/Projects.astro';
 	description="Portafolio de proyectos y experiencia de Javi, desarrollador web y móvil.">
 		<main class="px-2">
 			<SectionContainer id="presentacion" class="py-44 pb-32">
-				<div class="flex flex-row items-center gap-4">
-					<img class="rounded-full size-16 mb-2" src="https://avatars.githubusercontent.com/u/82216868?v=4" alt="Foto Javi"/>
-					<Badge>Disponible para trabajar</Badge>
+				<div class="flex flex-row items-center gap-4 mb-6 select-none">
+					<Image src={avatar} alt="Foto Javi" class="rounded-full size-16" loading="eager" decoding="async"/>
+					<Badge href="mailto:javitin.dev@gmail.com">Disponible para trabajar</Badge>
 				</div>
 
-				<h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">Javier Moreno Cano
+				<h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6">Javier Moreno Cano
 
 				</h1> 
 				<h2 class="text-xl lg:text-2xl opacity-80 text-wrap max-w-[700px]">
@@ -53,7 +56,7 @@ import Projects from '../components/Projects.astro';
 				<h2  class="text-3xl font-semibold mb-6">Sobre mí</h2>
 				<div class="flex flex-col items-center md:items-start md:flex-row-reverse gap-4">
 					<div class="rounded-2xl ring-2 ring-white/10 border border-white/10  p-2  bg-white/5 shadow-lg">
-						<img class="h-auto w-auto rounded-xl" src="https://avatars.githubusercontent.com/u/82216868?v=4" alt="Foto Javi"/>
+						  <Image src={avatar} alt="Foto Javi" class="rounded-xl" loading="lazy" decoding="async"/>
 					</div>
 					<div class="space-y-3">
 					<p class="text-base text-pretty opacity-80">
