--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,10 +38,10 @@ const {description, title} = Astro.props;
 
 <style is:global>
 	:root{
-		color-scheme: light dark;
+		color-scheme: dark;
 	}
 	html {
-		font-family: 'Onest Variable', sans-serif;
+		font-family: 'Onest Variable', system-ui, sans-serif;
 		scroll-behavior: smooth;
 	}
 
