--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Projects from '../components/Projects.astro';
 					<Badge href="mailto:javitin.dev@gmail.com" class="hover:scale-110 transition">Disponible para trabajar</Badge>
 				</div>
 
-				<h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6">Javier Moreno Cano
+				<h1 class="text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6">Javier Moreno Cano
 
 				</h1> 
 				<h2 class="text-xl lg:text-2xl opacity-80 text-wrap max-w-[700px]">
