Más anchura, experiencia y skills

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,18 +24,18 @@ import { Image } from 'astro:assets';
             Estudiante de último año de Ingeniería Informática y desarrollador web y móvil.
         </h2>
         
-        <nav class="flex gap-4 mt-2 flex-wrap">
+        <nav class="flex flex-wrap gap-4 mt-2 items-center justify-center md:justify-start">
             <SocialPill href="https://github.com/Javit-Dev" aria-label="GitHub">
-                <GithubIcon/> 
+                <GithubIcon/> GitHub
             </SocialPill>
             <SocialPill href="https://www.linkedin.com/" aria-label="LinkedIn">
-                <LinkedinIcon/> 
+                <LinkedinIcon/> LinkedIn
             </SocialPill>
             <SocialPill href="mailto:javitin.dev@gmail.com" aria-label="Email">
-                <MailIcon/> 
+                <MailIcon/> Contáctame
             </SocialPill>
             <SocialPill href="mailto:javitin.dev@gmail.com" aria-label="CV">
-                <CVIcon/>
+                <CVIcon/> Descargar CV
             </SocialPill>
         </nav>
     </div>
