--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -5,7 +5,7 @@ import { Image } from 'astro:assets';
 
 <div class="flex flex-col items-center md:items-start md:flex-row-reverse gap-4">
     <div class="rounded-2xl ring-2 ring-white/10 border border-white/10  p-2  bg-white/5 shadow-lg">
-            <Image src={avatar} alt="Foto Javi" class="rounded-xl" loading="lazy" decoding="async"/>
+            <Image src={avatar} alt="Foto Javi" class="w-64 h-auto rounded-xl" loading="lazy" decoding="async"/>
     </div>
     <div class="space-y-3">
     <p class="text-base text-pretty opacity-80">
