--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,7 +1,7 @@
 ---
 import ExperienceItem from "./ExperienceItem.astro"
 
-const EXPERIENCE = [
+const STUDIES = [
   {
     date: '2022 – Actualidad',
     title: 'Ingeniería Informática (último año)',
@@ -18,13 +18,35 @@ const EXPERIENCE = [
     description: 'Formación profesional de grado medio en SMR. Matrícula de honor.'
   }
 ];
+
+const EXPERIENCE = [
+  {
+    date: 'Marzo 2022 - Junio 2022',
+    title: 'Prácticas en Empresa - GameReactor',
+    description: 'Realización de prácticas en una empresa con una página web de noticias sobre videojuegos, encargándome de su mantenimiento, principalmente en el backend con PHP.'
+  },
+];
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700">               
-    {EXPERIENCE.map((item) => (
-        <li class="mb-10 ms-4">
-            <ExperienceItem {...item} />
-        </li>
-    ))}
-</ol>
-
+<div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+  <div>
+    <h3 class="text-2xl font-semibold mb-6">Estudios</h3>
+    <ol class="relative border-s border-gray-200 dark:border-gray-700">               
+        {STUDIES.map((item) => (
+            <li class="mb-10 ms-4">
+                <ExperienceItem {...item} />
+            </li>
+        ))}
+    </ol>
+  </div>
+  <div>
+    <h3 class="text-2xl font-semibold mb-6">Experiencia</h3>
+    <ol class="relative border-s border-gray-200 dark:border-gray-700">               
+        {EXPERIENCE.map((item) => (
+            <li class="mb-10 ms-4">
+                <ExperienceItem {...item} />
+            </li>
+        ))}
+    </ol>
+  <div>
+</div>
