Mas ajustes al ancho

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="lg:w-[768px] mx-auto">
+<header>
     <nav class="fixed w-full z-20 top-0 start-0 backdrop-blur">
     <div class="max-w-screen-xl flex items-center justify-center mx-auto p-4 relative">
 
