--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import AboutMe from '../components/AboutMe.astro';
 import Skills from '../components/Skills.astro';
 ---
 
-<Layout title="Porfolio de Javi"
-	description="Portafolio de proyectos y experiencia de Javi, desarrollador web y móvil.">
+<Layout title="Porfolio de Javier Moreno Cano"
+	description="Portafolio de proyectos y experiencia de Javier Moreno Cano, ingeniero informático y desarrollador web y móvil.">
 		<main class="px-2">
 			<SectionContainer id="presentacion" class="lg:h-screen py-44 lg:py-0 lg:flex lg:items-center">
 				<Hero/>
