--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer class="backdrop-blur">
-  <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+  <div class="w-full mx-auto lg:max-w-4xl md:max-w-2xl p-4 md:flex md:items-center md:justify-between">
     <span class="text-sm text-black/80 dark:text-white/80">© 2025 Javier Moreno Cano</span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-black/80 dark:text-white/80 sm:mt-0">
       <li><a href="#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a></li>
